--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -7,6 +7,16 @@
  year = {2017}
 }
 
+@article{Achinger-Kawecka2017,
+ author = {Achinger-Kawecka, Joanna and Taberlay, Phillippa C. and Clark, Susan J.},
+ doi = {10.1101/sqb.2016.81.031013},
+ journal = {Cold Spring Harbor Symposia on Quantitative Biology},
+ pages = {031013},
+ title = {Alterations in Three-Dimensional Organization of the Cancer Genome and Epigenome},
+ volume = {LXXXI},
+ year = {2016}
+}
+
 @article{Allen2015,
  author = {Allen, Benjamin L. and Taatjes, Dylan J.},
  doi = {10.1038/nrm3951},
@@ -762,6 +772,17 @@
  year = {2005}
 }
 
+@article{Durinck2009b,
+ author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
+ doi = {10.1038/nprot.2009.97},
+ journal = {Nature protocols},
+ number = {8},
+ pages = {1184--1191},
+ title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
+ volume = {4},
+ year = {2009}
+}
+
 @article{Durinck2009,
  author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
  doi = {10.1038/nprot.2009.97},
@@ -770,17 +791,6 @@
  pages = {1184--1191},
  publisher = {Nature Publishing Group},
  title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt},
- volume = {4},
- year = {2009}
-}
-
-@article{Durinck2009b,
- author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
- doi = {10.1038/nprot.2009.97},
- journal = {Nature protocols},
- number = {8},
- pages = {1184--1191},
- title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
  volume = {4},
  year = {2009}
 }
@@ -938,6 +948,17 @@
  publisher = {Nature Publishing Group},
  title = {Single-cell Hi-C reveals unique chromatin reorganization at oocyte-tozygote transition},
  volume = {544},
+ year = {2017}
+}
+
+@article{Flottmann2017,
+ author = {Fl{\"{o}}ttmann, Ricarda and Kragesteen, Bj{\o}rt K and Geuer, Sinje and Socha, Magdalena and Allou, Lila and Sowi{\'{n}}ska-Seidler, Anna and {Bosquillon de Jarcy}, Laure and Wagner, Johannes and Jamsheer, Aleksander and Oehl-Jaschkowitz, Barbara and Wittler, Lars and de Silva, Deepthi and Kurth, Ingo and Maya, Idit and Santos-Simarro, Fernando and H{\"{u}}lsemann, Wiebke and Klopocki, Eva and Mountford, Roger and Fryer, Alan and others},
+ doi = {10.1038/gim.2017.154},
+ journal = {Genet Med},
+ number = {April},
+ pages = {1--9},
+ title = {Noncoding copy-number variations are associated with congenital limb malformation},
+ volume = {00},
  year = {2017}
 }
 
@@ -1544,6 +1565,18 @@
  year = {2015}
 }
 
+@article{Katainen2015,
+ author = {Katainen, Riku and Dave, Kashyap and Pitk{\"{a}}nen, Esa and Palin, Kimmo and Kivioja, Teemu and V{\"{a}}lim{\"{a}}ki, Niko and Gylfe, Alexandra E and Ristolainen, Heikki and H{\"{a}}nninen, Ulrika A and Cajuso, Tatiana and Kondelin, Johanna and Tanskanen, Tomas and Mecklin, Jukka-Pekka and J{\"{a}}rvinen, Heikki and Renkonen-Sinisalo, Laura and Lepist{\"{o}}, Anna and Kaasinen, Eevi and Kilpivaara, Outi and Tuupanen, Sari and others},
+ doi = {10.1038/ng.3335},
+ journal = {Nature Genetics},
+ number = {7},
+ pages = {818--21},
+ publisher = {Nature Publishing Group},
+ title = {CTCF/cohesin-binding sites are frequently mutated in cancer},
+ volume = {advance on},
+ year = {2015}
+}
+
 @article{Kent2003,
  author = {Kent, W James and Baertsch, Robert and Hinrichs, Angie and Miller, Webb and Haussler, David},
  doi = {10.1073/pnas.1932072100},
@@ -1688,6 +1721,17 @@
  title = {Paired-end mapping reveals extensive structural variation in the human genome.},
  volume = {318},
  year = {2007}
+}
+
+@article{Kraft2015,
+ author = {Kraft, Katerina and Geuer, Sinje and Will, Anja J. and Chan, Wing Lee and Paliou, Christina and Borschiwer, Marina and Harabula, Izabela and Wittler, Lars and Franke, Martin and Ibrahim, Daniel M. and Kragesteen, Bj{\o}rt K. and Spielmann, Malte and Mundlos, Stefan and Lupi{\'{a}}{\~{n}}ez, Dar{\'{i}}o G. and Andrey, Guillaume},
+ doi = {10.1016/j.celrep.2015.01.016},
+ journal = {Cell Reports},
+ number = {5},
+ pages = {833--839},
+ title = {Deletions, Inversions, Duplications: Engineering of Structural Variants using CRISPR/Cas in Mice},
+ volume = {10},
+ year = {2015}
 }
 
 @article{Krijger2016,
@@ -2998,6 +3042,17 @@
  title = {Phase separation drives heterochromatin domain formation},
  volume = {547},
  year = {2017}
+}
+
+@article{Symmons2016,
+ author = {Symmons, Orsolya and Pan, Leslie and Remeseiro, Silvia and Aktas, Tugce and Klein, Felix and Huber, Wolfgang and Spitz, Fran{\c{c}}ois and Amano, T. and Sagai, T. and Tanabe, H. and Mizushina, Y. and Nakazawa, H. and Shiroishi, T. and Anderson, E. and Devenney, P.S. and Hill, R.E. and Lettice, L.A. and Banerji, J. and Rusconi, S. and others},
+ doi = {10.1016/j.devcel.2016.10.015},
+ journal = {Developmental Cell},
+ number = {0},
+ pages = {47--57},
+ title = {The Shh Topological Domain Facilitates the Action of Remote Enhancers by Reducing the Effects of Genomic Distances},
+ volume = {0},
+ year = {2016}
 }
 
 @article{Symmons2014,
